# SLMaster

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_CH.md  README_EN.md
device/: CMakeLists.txt
device/camera/: CMakeLists.txt
device/camera/common/: camera.h  cameraFactory.cpp  cameraFactory.h  safeQueue.hpp  typeDef.h
device/projector/: CMakeLists.txt
device/projector/common/: projector.h  projectorFactory.h  typeDef.h
gui/: CMakeLists.txt
gui/qml/: app.rc  resource.qrc
gui/qml/ui/: App.qml
gui/src/: AppType.h  CalibrateEngine.cpp  CalibrateEngine.h  CameraEngine.cpp  CameraEngine.h  CameraModel.cpp  CameraModel.h  CircularReveal.cpp  CircularReveal.h  ImagePaintItem.cpp  ImagePaintItem.h  VtkProcessEngine.cpp  VtkProcessEngine.h  VtkRenderItem.cpp  VtkRenderItem.h  logger.cpp  logger.h  main.cpp  settingsHelper.cpp  settingsHelper.h  typeDef.h  vtkCusInteractorStyleRubberBandPick.cpp  vtkCusInteractorStyleRubberBandPick.h
gui/src/calibrationMaster/: caliPacker.cpp  caliPacker.h  calibrator.cpp  calibrator.h  chessBoardCalibrator.cpp  chessBoardCalibrator.h  circleGridCalibrator.cpp  circleGridCalibrator.h  concentricRingCalibrator.cpp  concentricRingCalibrator.h  edgesSubPix.cpp  edgesSubPix.h
gui/src/nodes/: actorOutputNode.cpp  actorOutputNode.h  cloudInputNode.cpp  cloudInputNode.h  cloudOutputNode.cpp  cloudOutputNode.h  flowGraph.cpp  flowGraph.h  flowNode.cpp  flowNode.h  flowNodeBehavior.cpp  flowNodeBehavior.h  greedyProjectionTriangulationNode.cpp  greedyProjectionTriangulationNode.h  intersectionLineNode.cpp  intersectionLineNode.h  meshOutputNode.cpp  meshOutputNode.h  passThroughFilterNode.cpp  passThroughFilterNode.h  poissonNode.cpp  poissonNode.h  sacSegmentNode.cpp  sacSegmentNode.h  splitOutputNode.cpp  splitOutputNode.h  statisticalOutlierRemovalNode.cpp  statisticalOutlierRemovalNode.h  threeLineIntersectionNode.cpp  threeLineIntersectionNode.h
perf/: CMakeLists.txt  perfInterzoneSinusFourGrayscalePattern.cpp  perfLaserLine.cpp  perfShiftGrayCodePattern.cpp  perfThreeFrequencyHeterodynePattern.cpp
src/: CMakeLists.txt  binoocularCamer.cpp  binoocularCamera.h  binosSinusCompleGrayCodePattern.cpp  binosSinusCompleGrayCodePattern.h  caliInfo.cpp  caliInfo.h  common.h  defocusMethod.hpp  pattern.h  safeQueue.hpp  slCamera.h  slCameraFactory.cpp  slCameraFactory.h  slmaster.cpp  slmaster.h  tool.cpp  tool.h  trinocularCamera.cpp  trinocularCamera.h  trinocularMultiViewStereoGeometryPattern.cpp  trinocularMultiViewStereoGeometryPattern.h
src/algorithm/: CMakeLists.txt  algorithm.h
src/algorithm/cpuStructuredLight/: defocusMethod.cpp  defocusMethod.h  interzoneSinusFourGrayscalePattern.cpp  interzoneSinusFourGrayscalePattern.hpp  laserLine.cpp  lasterLine.h  recoverDepth.cpp  recoverDepth.h  sinusCompleGraycodePattern.cpp  sinusCompleGraycodePattern.hpp  sinusShiftGraycodePattern.cpp  sinusShiftGraycodePattern.hpp  sinus_comple_graycode_pattern.cpp  sinus_comple_graycode_pattern.hpp  sinus_shift_graycode_pattern.cpp  sinus_shift_graycode_pattern.hpp  structuredLight.hpp  structured_light.hpp  threeFrequencyHeterodynePattern.cpp  threeFrequencyHeterodynePattern.hpp
src/algorithm/gpuStructuredLight/: cudaMultiViewStereoGeometryPattern.cpp  cudaMultiViewStereoGeometryPattern.hpp  cudaSinusCompleGraycodePattern.cpp  cudaSinusCompleGraycodePattern.hpp  cuda_multi_view_stereo_geometry_pattern.cpp  cuda_multi_view_stereo_geometry_pattern.hpp  cuda_sinus_comple_graycode_pattern.cpp  cuda_sinus_comple_graycode_pattern.hpp  cudastructuredlight.hpp
src/calibration/: CMakeLists.txt  caliPacker.cpp  caliPacker.h  calibration.h  calibrator.cpp  calibrator.h  chessBoardCalibrator.cpp  chessBoardCalibrator.h  circleGridCalibrator.cpp  circleGridCalibrator.h  concentricRingCalibrator.cpp  concentricRingCalibrator.h  edgesSubPix.cpp  edgesSubPix.h  hiddenMethodCalibrator.cpp  hiddenMethodCalibrator.h  rotationAxisCalibration.cpp  rotationAxisCalibration.h
src/cameras/: CMakeLists.txt  binoocularCamer.cpp  binoocularCamera.h  binosSinusCompleGrayCodePattern.cpp  binosSinusCompleGrayCodePattern.h  binosSinusShiftGrayCodePattern.cpp  binosSinusShiftGrayCodePattern.h  caliInfo.cpp  caliInfo.h  cameras.h  jsoncpp.cpp  monoSinusCompleGrayCodePattern.cpp  monoSinusCompleGrayCodePattern.h  monoSinusShiftGrayCodePattern.cpp  monoSinusShiftGrayCodePattern.h  monocularCamera.cpp  monocularCamera.h  pattern.h  slCamera.h  slCameraFactory.cpp  slCameraFactory.h  tool.cpp  tool.h  trinocularCamera.cpp  trinocularCamera.h  trinocularMultiViewStereoGeometryPattern.cpp  trinocularMultiViewStereoGeometryPattern.h
src/cameras/binocular/: binoInterzoneSinusFourGrayscalePattern.cpp  binoInterzoneSinusFourGrayscalePattern.h  binoSinusCompleGrayCodePattern.cpp  binoSinusCompleGrayCodePattern.h  binoSinusShiftGrayCodePattern.cpp  binoSinusShiftGrayCodePattern.h  binoThreeFrequencyHeterodynePattern.cpp  binoThreeFrequencyHeterodynePattern.h  binoocularCamer.cpp  binoocularCamera.h  binosInterzoneSinusFourGrayscalePattern.cpp  binosInterzoneSinusFourGrayscalePattern.h  binosSinusCompleGrayCodePattern.cpp  binosSinusCompleGrayCodePattern.h  binosSinusShiftGrayCodePattern.cpp  binosSinusShiftGrayCodePattern.h
src/cameras/monocular/: monoInterzoneSinusFourGrayscalePattern.cpp  monoInterzoneSinusFourGrayscalePattern.h  monoSinusCompleGrayCodePattern.cpp  monoSinusCompleGrayCodePattern.h  monoSinusShiftGrayCodePattern.cpp  monoSinusShiftGrayCodePattern.h  monoThreeFrequencyHeterodynePattern.cpp  monoThreeFrequencyHeterodynePattern.h  monocularCamera.cpp  monocularCamera.h
src/device/: CMakeLists.txt  device.h
test/: CMakeLists.txt  testBinocularCamera.cpp  testHuarayCamera.cpp  testInterzoneSinusFourGrayscalePattern.cpp  testLaserLine.cpp  testProjectorDlpcApi3010.cpp  testProjectorDlpcApi4710.cpp  testSLCameraCpu.cpp  testSLCameraGpu.cpp  testShiftGrayCodePattern.cpp  testShiftLineCodeMaster.cpp  testThreeFrequencyHeterodynePattern.cpp  test_cuda_multi_view_stereo_geometry.cpp  test_cuda_sinus_comple_graycode.cpp
test/data/: binoocularCameraConfig.json
(+127 files in other folders)
